deps/LAGraph/include/LAGraph.h

#define LAGRAPH_INVALID_GRAPH                   (-1000)
#define LAGRAPH_SYMMETRIC_STRUCTURE_REQUIRED    (-1001)
#define LAGRAPH_IO_ERROR                        (-1002)
#define LAGRAPH_NO_SELF_EDGES_ALLOWED           (-1004)
struct LAGraph_Graph_struct
{
    GrB_Matrix  A ;         
    LAGraph_Kind kind ;     
    GrB_Matrix AT ; 
    GrB_Vector out_degree ; 
    GrB_Vector in_degree ;  
    LAGraph_Boolean is_symmetric_structure ;    
    int64_t nself_edges ; 
    GrB_Scalar emin ;   
    LAGraph_State emin_state ;
    GrB_Scalar emax ;   
    LAGraph_State emax_state ;
} ;
typedef struct LAGraph_Graph_struct *LAGraph_Graph ;
LAGRAPH_PUBLIC
int LAGraph_CheckGraph
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_MMWrite
(
    GrB_Matrix A,       
    FILE *f,            
    FILE *fcomments,    
    char *msg
) ;
typedef enum
{
    LAGraph_SILENT = 0,     
    LAGraph_SUMMARY = 1,    
    LAGraph_SHORT = 2,      
    LAGraph_COMPLETE = 3,   
    LAGraph_SHORT_VERBOSE = 4,    
    LAGraph_COMPLETE_VERBOSE = 5  
}
LAGraph_PrintLevel ;
LAGRAPH_PUBLIC
int LAGraph_Matrix_Print
(
    const GrB_Matrix A,     
    LAGraph_PrintLevel pr,  
    FILE *f,            
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Vector_Print
(
    const GrB_Vector v,     
    LAGraph_PrintLevel pr,  
    FILE *f,            
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Matrix_IsEqual
(
    bool *result,       
    const GrB_Matrix A,
    const GrB_Matrix B,
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Matrix_IsEqualOp
(
    bool *result,           
    const GrB_Matrix A,
    const GrB_Matrix B,
    const GrB_BinaryOp op,        
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Vector_IsEqual
(
    bool *result,           
    const GrB_Vector u,
    const GrB_Vector v,
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Vector_IsEqualOp
(
    bool *result,           
    const GrB_Vector u,
    const GrB_Vector v,
    const GrB_BinaryOp op,        
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_TriangleCount
(
    uint64_t *ntriangles,   
    LAGraph_Graph  G,
    char *msg
) ;