graph/src/graph/graphblas/lagraph_bindings.rs

unsafe extern "C" {
    #[doc = " LAGraph_Matrix_Print displays a matrix in a human-readable form.  This\n method is not meant for saving a GrB_Matrix to a file; see\n @sphinxref{LAGraph_MMWrite} for that method.\n\n @param[in] A         matrix to display.\n @param[in] pr        print level.\n @param[in,out] f     handle to an open file to write to.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if A or f are NULL.\n @retval GrB_NOT_IMPLEMENTED if A has a user-defined type.\n @retval LAGRAPH_IO_ERROR if the file could not be written to.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Matrix_Print(
        A: GrB_Matrix,
        pr: LAGraph_PrintLevel,
        f: *mut FILE,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Vector_Print displays a vector in a human-readable form.  This\n method is not meant for saving a GrB_Vector to a file.  To perform that\n operation, copy the GrB_Vector into an n-by-1 GrB_Matrix and use\n @sphinxref{LAGraph_MMWrite}.\n\n @param[in] v         vector to display.\n @param[in] pr        print level.\n @param[in,out] f     handle to an open file to write to.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if v or f are NULL.\n @retval GrB_NOT_IMPLEMENTED if v has a user-defined type.\n @retval LAGRAPH_IO_ERROR if the file could not be written to.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Vector_Print(
        v: GrB_Vector,
        pr: LAGraph_PrintLevel,
        f: *mut FILE,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Matrix_IsEqual compares two matrices for exact equality.  If the\n two matrices have different data types, the result is always false (no\n typecasting is performed).  Only the 11 built-in GrB* types are supported.\n If both A and B are NULL, the return value is true.  If A and/or B are\n floating-point types and contain NaN's, result is false.\n\n @param[out] result   true if A and B are exactly equal, false otherwise.\n @param[in] A         matrix to compare.\n @param[in] B         matrix to compare.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if result is NULL.\n @retval GrB_NOT_IMPLEMENTED if A or B has a user-defined type.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Matrix_IsEqual(
        result: *mut bool,
        A: GrB_Matrix,
        B: GrB_Matrix,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Matrix_IsEqualOp compares two matrices using the given binary\n operator.  The op may be built-in or user-defined.  The two matrices may\n have different types and still be determined to be equal.  To be equal, two\n matrices must have the same sparsity structure, and op(aij,bij) must return\n true for all pairs of entries aij and bij that appear in the structure of\n both A and B.  The matrices A and/or B can have any type, as long as they\n are valid inputs to the op.  If both A and B are NULL, the return value is\n true.\n\n @param[out] result   true if A and B are equal (per the op), false otherwise.\n @param[in] A         matrix to compare.\n @param[in] B         matrix to compare.\n @param[in] op        operator for the comparison.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if result or op are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Matrix_IsEqualOp(
        result: *mut bool,
        A: GrB_Matrix,
        B: GrB_Matrix,
        op: GrB_BinaryOp,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Vector_IsEqual compares two vectors for exact equality.  If the\n two vectors have different data types, the result is always false (no\n typecasting is performed).  Only the 11 built-in GrB* types are supported.\n If both u and v are NULL, the return value is true.  If u and/or v are\n floating-point types and contain NaN's, result is false.\n\n @param[out] result   true if u and v are exactly equal, false otherwise.\n @param[in] u         vector to compare.\n @param[in] v         vector to compare.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if result is NULL.\n @retval GrB_NOT_IMPLEMENTED if u or v has a user-defined type.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Vector_IsEqual(
        result: *mut bool,
        u: GrB_Vector,
        v: GrB_Vector,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Vector_IsEqualOp compares two vectors using the given binary\n operator.  The op may be built-in or user-defined.  The two vectors may\n have different types and still be determined to be equal.  To be equal, two\n vectors must have the same sparsity structure, and op(ui,vi) must return\n true for all pairs of entries ui and vi that appear in the structure of\n both u and v.  The vectors u and/or v can have any type, as long as they\n are valid inputs to the op.  If both u and v are NULL, the return value is\n true.\n\n @param[out] result   true if u and v are equal (per the op), false otherwise.\n @param[in] u         vector to compare.\n @param[in] v         vector to compare.\n @param[in] op        operator for the comparison.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if result or op are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Vector_IsEqualOp(
        result: *mut bool,
        u: GrB_Vector,
        v: GrB_Vector,
        op: GrB_BinaryOp,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Random_Seed creates a pseudo-random vector containing an array of\n different pseudo-random streams, one per entry.  On input, the values of the\n State vector are ignored but its structure is used.  On output, all entries\n that were in the original structure of the State vector are assigned random\n values, depending on the scalar seed value.  Each entry is considered its\n own pseudo-random number stream, with the overall seed value being revised\n for each entry in the vector, depending on their index in the vector.\n\n More precisely, if the entry State [i] is present in the State vector, it is\n initialized with the pseudo random number State [i] = splitmix64 (i + seed);\n see https://dl.acm.org/doi/10.1145/2714064.2660195 for details, or\n https://en.wikipedia.org/wiki/Xorshift .\n\n To call this method again with a new scalar seed, for subsequent iterations\n for the same State vector, it is advisable to advance the seed by at least\n n, where n is the dimension of the State vector.  Otherwise, the random\n number streams will be correlated.  For example, if seed++ is performed when\n this method is called again, then the new State [1] stream will be identical\n to the prior State [0] stream.\n\n The State vector should normally be of type GrB_UINT64, but this is not\n enforced.  Typecasting will be performed if it has a different type, which\n will affect the pseudo-random numbers generated and results are thus not\n guaranteed in this case.\n\n @param[in,out] State  vector to initialize with pseudo-random numbers.\n @param[in] seed       scalar seed value.\n @param[in,out] msg    any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if State is NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Random_Seed(
        State: GrB_Vector,
        seed: u64,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Random_Next takes as input a vector previously initialized by\n LAGraph_Random_Seed, and modifies all its entries so that they take on their\n next value in their respective pseudo-random number streams.\n\n Each stream in State [i] should be initialized by LAGraph_Random_Seed, and\n then advanced to the next pseudo-random value with LAGraph_Random_Next,\n which computes State [i] = xorshift64 (State [i]).  See\n https://doi.org/10.18637/jss.v008.i14 and\n https://en.wikipedia.org/wiki/Xorshift .\n\n @param[in,out] State  vector with random numbers to be advanced.\n @param[in,out] msg    any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if State is NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Random_Next(
        State: GrB_Vector,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_TriangleCount: count the triangles in a graph.  This is a Basic\n algorithm (G->nself_edges, G->out_degree, G->is_symmetric_structure are\n computed, if not present).\n\n @param[out]    ntriangles    the number of triangles in G.\n @param[in,out] G             the graph, which must by undirected, or\n                              directed but with a symmetric structure.\n                              No self loops can be present.\n @param[in,out] msg           any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G or ntriangles are NULL.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @retval LAGRAPH_NO_SELF_EDGES_ALLOWED if G has any self-edges.\n @retval LAGRAPH_SYMMETRIC_STRUCTURE_REQUIRED if G is directed with an\n      unsymmetric G->A matrix.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_TriangleCount(
        ntriangles: *mut u64,
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
